<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/characterFragment"
        android:icon="@drawable/ic_character"
        android:title="@string/nav_character" />

    <item
        android:id="@+id/worldFragment"
        android:icon="@drawable/ic_world"
        android:title="@string/nav_world" />

    <item
        android:id="@+id/relationshipsFragment"
        android:icon="@drawable/ic_relationships"
        android:title="@string/nav_relationships" />

    <item
        android:id="@+id/healthFragment"
        android:icon="@drawable/ic_health"
        android:title="@string/nav_health" />

    <item
        android:id="@+id/inventoryFragment"
        android:icon="@drawable/ic_inventory"
        android:title="@string/nav_inventory" />

</menu>
